<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/back_white_rect_line_dialog"
    android:layout_height="wrap_content"
    android:padding="@dimen/_10dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10dp"
        android:layout_marginTop="@dimen/_10dp"
        android:layout_marginEnd="@dimen/_10dp"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="@dimen/_60dp"
            android:gravity="center">

            <ImageView
                android:layout_height="@dimen/_55dp"
                android:layout_width="@dimen/_55dp"
                app:tint="@color/primary_color"
                android:src="@drawable/ic_sync" />
        </LinearLayout>
    </LinearLayout>



    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_10dp"
        android:layout_marginTop="@dimen/_10dp"
        android:fontFamily="@font/poppins_medium"
        android:gravity="center"

        android:text="@string/do_you_want_to_sync_data"
        android:textColor="@color/text_color"
        android:textSize="@dimen/_15sp"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.4dp"
        android:layout_marginTop="@dimen/_15dp"
        android:layout_marginBottom="@dimen/_5dp"
        android:layout_marginHorizontal="@dimen/_10dp"
        android:background="@color/text_color"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="@dimen/_10dp"
        app:layout_constraintTop_toBottomOf="@+id/ll_date">

        <LinearLayout
            android:id="@+id/btn_cancel"
            android:layout_width="@dimen/_120dp"
            android:layout_height="40dp"
            android:layout_margin="@dimen/_5dp"
            android:background="@drawable/border_btn_bg"
            android:gravity="center"
            android:paddingHorizontal="@dimen/_2dp"
            android:orientation="horizontal">



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no"
                android:textColor="@color/primary_color"
                android:textSize="@dimen/_14sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/btn_save"
            android:layout_width="@dimen/_120dp"
            android:layout_height="40dp"
            android:layout_margin="@dimen/_5dp"
            android:background="@drawable/button_bg"
            android:gravity="center"
            android:paddingHorizontal="@dimen/_2dp"
            android:orientation="horizontal">



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yes"
                android:textColor="@color/white"
                android:textSize="@dimen/_16sp" />

        </LinearLayout>

    </LinearLayout>


</LinearLayout>