<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.Fragment.LoginFragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/img_login_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/forestry_logo"
        android:layout_width="@dimen/_400dp"
        android:layout_height="@dimen/_1dp"
        android:layout_marginTop="@dimen/_160dp"
        android:src="@drawable/ic_logo_land_survey_digitization_green___black"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_25dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/welcome"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="@dimen/_28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forestry_logo" />

    <TextView
        android:id="@+id/txt_enter_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5dp"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/details_to_continue"
        android:textAlignment="center"
        android:textColor="@color/white"

        android:textSize="@dimen/_15sp"
        app:layout_constraintTop_toBottomOf="@id/txt_welcome" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_20dp"
        android:layout_marginTop="@dimen/_15sp"
        android:background="@drawable/img_login_bg_card"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_enter_details">

        <TextView
            android:id="@+id/txt_signIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10dp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/sign_in"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="@dimen/_24sp"
            android:textStyle="bold"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_15sp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_signIn">

            <LinearLayout
                android:id="@+id/credential_lay"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:visibility="visible">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10dp"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/email_id"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_14sp"

                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/input_field_border"
                    android:gravity="center|left"
                    android:layout_marginTop="@dimen/_5dp"
                    android:orientation="horizontal">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_40dp"
                        android:fontFamily="@font/poppins_regular"
                        android:gravity="center"
                        android:visibility="visible"
                        app:boxBackgroundMode="none"
                        app:boxStrokeWidth="0dp"
                        app:boxStrokeWidthFocused="0dp"
                        app:cursorColor="@color/primary_color"
                        app:hintAnimationEnabled="false"
                        app:expandedHintEnabled="false"
                        app:hintEnabled="false"
                        app:passwordToggleTint="@color/sub_heading">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/username"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_40dp"
                            android:layout_gravity="center"
                            android:background="@drawable/input_field_border"
                            android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789@#."
                            android:drawableStart="@drawable/ic_male"
                            android:focusable="true"
                            android:fontFamily="@font/poppins_regular"
                            android:hint="Enter email id"
                            android:imeOptions="actionDone"
                            android:inputType="textEmailAddress"
                            android:paddingVertical="0dp"
                            android:singleLine="true"
                            android:text="aditya.giri@garudauav.com"
                            android:drawablePadding="5dp"
                            android:textColor="@color/text_color"
                            android:textSize="@dimen/_15sp" />
                    </com.google.android.material.textfield.TextInputLayout>

<!--
                    <EditText
                        android:id="@+id/username"
                        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_40dp"
                        android:background="@null"
                        android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789@#."
                        android:drawableStart="@drawable/ic_male"
                        android:drawablePadding="@dimen/_5pt"
                        android:fontFamily="@font/poppins_regular"
                        android:hint="Enter email id"
                        android:imeOptions="actionNext"
                        android:inputType="textEmailAddress"
                        android:paddingStart="@dimen/_5pt"
                        android:singleLine="true"
                        android:textColor="@color/text_color"
                        android:visibility="visible"
                        app:boxStrokeWidth="0dp"
                        app:boxStrokeWidthFocused="0dp"
                        app:hintAnimationEnabled="true"
                        app:passwordToggleEnabled="false" />
-->


                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10dp"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/password"
                    android:textAlignment="center"
                    android:textColor="@color/white"

                    android:textSize="@dimen/_14sp"
                    android:textStyle="bold" />


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40dp"
                    android:fontFamily="@font/poppins_regular"
                    android:gravity="center"
                    android:visibility="visible"
                    app:boxBackgroundMode="none"
                    app:boxStrokeWidth="0dp"
                    app:boxStrokeWidthFocused="0dp"
                    app:cursorColor="@color/primary_color"
                    app:hintAnimationEnabled="false"
                    app:expandedHintEnabled="false"
                    app:hintEnabled="false"
                    android:layout_marginTop="@dimen/_5dp"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/sub_heading">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"

                        android:background="@drawable/input_field_border"
                        android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789@#."
                        android:drawableStart="@drawable/ic_lock"
                        android:focusable="true"
                        android:fontFamily="@font/poppins_regular"
                        android:hint="Enter password"
                        android:imeOptions="actionDone"
                        android:inputType="textPassword"
                        android:paddingVertical="0dp"
                        android:singleLine="true"
                        android:text="Rajshri@123"
                        android:drawablePadding="5dp"
                        android:textColor="@color/text_color"
                        android:textSize="@dimen/_15sp" />
                </com.google.android.material.textfield.TextInputLayout>


            </LinearLayout>


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/sign_in_btn"
                android:layout_width="@dimen/_234dp"
                android:layout_height="@dimen/_45dp"
                android:layout_gravity="center"
                android:layout_margin="@dimen/_16dp"
                android:layout_marginTop="@dimen/_20dp"
                android:background="@drawable/btn_bg"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/sign_in"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_16sp"
                android:textStyle="bold" />

        </LinearLayout>

        <include
            android:id="@+id/progress_circular"
            layout="@layout/progress_bar" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>