<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".View.Fragment.SyncFragment">

    <LinearLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:elevation="@dimen/_10dp"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/back_arrow"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingRight="@dimen/_12dp">

            <ImageView
                android:id="@+id/back_arrow_img"

                android:layout_width="@dimen/_20dp"
                android:layout_height="@dimen/_20dp"
                android:layout_marginStart="@dimen/_10dp"
                android:src="@drawable/ic_arrow_back" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:text="Offline Survey"
            android:textColor="@color/text_color"
            android:textSize="@dimen/_16sp"
            android:textStyle="bold" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />
   


    </LinearLayout>
    <androidx.core.widget.NestedScrollView
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/_15dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10dp"
                android:layout_marginBottom="@dimen/_10dp"
                android:orientation="horizontal"

                android:visibility="gone">

                <CheckBox
                    android:id="@+id/select_all_check"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/_10dp"
                    android:layout_weight="1"
                    android:layout_gravity="center_vertical"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/select_all" />

                <LinearLayout
                    android:id="@+id/btn_sync"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_10dp"

                    android:gravity="end"

                    android:orientation="horizontal"
                    android:paddingHorizontal="@dimen/_5dp"
                    >

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginEnd="@dimen/_2dp"
                        android:src="@drawable/sync_all_bg"
                        android:visibility="visible"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_2dp"
                        android:text="Sync All"
                        android:visibility="gone"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_14sp" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/uploading_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/uploading_status"
                        android:textColor="@color/text_color"
                        android:textSize="@dimen/_15sp"
                        android:textStyle="bold" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />


                </LinearLayout>


            </LinearLayout>


            <LinearLayout
                android:id="@+id/uploading_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_10dp"
                android:visibility="visible"
                android:elevation="@dimen/_10dp">


                <LinearLayout
                    android:id="@+id/upload_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="@dimen/_10dp"
                    android:elevation="@dimen/_15dp"
                    android:visibility="visible">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_10dp"
                        android:layout_marginBottom="@dimen/_5dp"
                        android:fontFamily="@font/poppins_bold"
                        android:gravity="center"
                        android:text="Data Sync"
                        android:textColor="@color/text_color"
                        android:textSize="@dimen/_15sp"
                        android:textStyle="bold"
                        android:visibility="visible" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:weightSum="4.3"
                        android:layout_marginTop="@dimen/_10dp"
                        android:gravity="center">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight=".3"
                            android:fontFamily="@font/poppins_medium"
                            android:gravity="center"
                            android:text="S.No."
                            android:textColor="@color/text_color"
                            android:textSize="@dimen/_15sp" />
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:fontFamily="@font/poppins_medium"
                            android:gravity="center"
                            android:text="@string/date"
                            android:textColor="@color/text_color"
                            android:textSize="@dimen/_15sp" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:fontFamily="@font/poppins_medium"
                            android:gravity="center"
                            android:text="Plot. No."
                            android:textColor="@color/text_color"
                            android:textSize="@dimen/_15sp" />
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:fontFamily="@font/poppins_medium"
                            android:gravity="center"
                            android:text="View Doc"
                            android:textColor="@color/text_color"
                            android:textSize="@dimen/_15sp" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:fontFamily="@font/poppins_medium"
                            android:gravity="center"
                            android:text="Sync"
                            android:textColor="@color/text_color"
                            android:textSize="@dimen/_15sp" />
                    </LinearLayout>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_1dp"
                        android:layout_marginHorizontal="@dimen/_5dp"
                        android:layout_weight="1"
                        android:layout_marginTop="@dimen/_10dp"
                        android:background="@color/view_line" />


                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/sync_recycler"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_5dp"
                        tools:listitem="@layout/sync_item" />


                </LinearLayout>

            </LinearLayout>




            <LinearLayout
                android:id="@+id/loader"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:visibility="gone">

                <include layout="@layout/custom_loader" />
            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>


    <LinearLayout
        android:id="@+id/no_data_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">


        <ImageView
            android:id="@+id/offLine_logo"
            android:layout_width="300dp"
            android:layout_height="220dp"
            android:src="@drawable/ic_offline_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/no_data_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/no_data_found"
            android:textAlignment="center"
            android:textColor="@color/no_data"
            android:textSize="@dimen/_20dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"

            app:layout_constraintTop_toBottomOf="@+id/offLine_logo" />

    </LinearLayout>


</LinearLayout>